add querystring params for simulating price and timestamp
